fix: text highlight contrast (#23)

--- a/app/globals.css
+++ b/app/globals.css
@@ -255,6 +255,10 @@
     html {
         @apply font-sans;
     }
+    ::selection {
+        background-color: var(--primary);
+        color: var(--primary-foreground);
+    }
     code,
     kbd,
     samp,
